Fix codeblock style: Word wrap in codeblock

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -2,4 +2,5 @@
   margin: auto 0;
   padding: 4px 4px;
   font-size: 1em;
+  white-space: pre-wrap;
 }
